# advanced_c_samples

./: CMakeLists.txt  README.md
algorithm/: main.c
database/: main.c
image/: image.c  image.h  image_format.h  main.c
pointer/: func.c  func.h  main.c
